Fix #66 learn more spacing

--- a/styles.scss
+++ b/styles.scss
@@ -1020,7 +1020,7 @@ detail {
         }
         .learn-more {
             h4 {
-                margin: 3 * $margin 0;
+                margin: 6*$margin 0 3*$margin 0;
             }
             a {
                 color: $gray;
